--- a/src/styles/components/_HouseDataForm.scss
+++ b/src/styles/components/_HouseDataForm.scss
@@ -6,3 +6,11 @@
     text-align: center;
     margin-bottom:2%;
 }
+
+.MuiTypography-root MuiFormControlLabel-label MuiTypography-body1{
+    font-size: 2rem;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.00938em;
+}
