--- a/src/styles/components/_HouseDataForm.scss
+++ b/src/styles/components/_HouseDataForm.scss
@@ -1,10 +1,12 @@
 .form{
-    margin-top:5rem;
+    margin-top:$l-size;
 }
 
 .form__title{
     text-align: center;
     margin-bottom:2%;
+    font-size: $xl-size;
+    line-height: normal;
 }
 
 .MuiTypography-root MuiFormControlLabel-label MuiTypography-body1{
