--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -5,8 +5,8 @@ html {
 
 body {
   font-family: Helvetica, Arial, sans-serif;
-  font-size: $ml-size;
-  line-height:$xl-size;
+  font-size: $m-size;
+  line-height:$ml-size;
   color:rgba(0,0,0,0.87);
 }
 
@@ -22,7 +22,3 @@ button:disabled {
   text-decoration: underline !important;
 }
 
-.icons i,
-.icons svg {
-   color: white;
-}
