--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,7 @@
 @import './base/settings';
 @import './base/base';
 @import './components/header';
-@import './components/HouseDataForm';
-@import './components/ChartInfo'
+@import './components/houseDataForm';
+@import './components/chartInfo';
+@import './components/infoPage';
+@import './components/errorModal';
